--- a/railway.toml
+++ b/railway.toml
@@ -10,12 +10,12 @@ restartPolicyMaxRetries = 10
 
 [environments.production.variables]
 NODE_ENV = "production"
-MONGODB_URI = "mongodb://mongo:dfSakOiePzOactfHNwqrQNfHnRlqBVZX@mongodb.railway.internal:27017/condominio-sistema"
+MONGODB_URI = "mongodb://mongo:dfSakOiePzOactfHNwqrQNfHnRlqBVZX@shuttle.proxy.rlwy.net:30512/condominio-sistema"
 MONGODB_DB = "condominio-sistema"
 MONGO_INITDB_ROOT_PASSWORD = "dfSakOiePzOactfHNwqrQNfHnRlqBVZX"
 MONGO_INITDB_ROOT_USERNAME = "mongo"
 MONGO_PUBLIC_URL = "mongodb://mongo:dfSakOiePzOactfHNwqrQNfHnRlqBVZX@shuttle.proxy.rlwy.net:30512"
-MONGO_URL = "mongodb://mongo:dfSakOiePzOactfHNwqrQNfHnRlqBVZX@mongodb.railway.internal:27017"
+MONGO_URL = "mongodb://mongo:dfSakOiePzOactfHNwqrQNfHnRlqBVZX@shuttle.proxy.rlwy.net:30512"
 MONGOHOST = "mongodb.railway.internal"
 MONGOPASSWORD = "dfSakOiePzOactfHNwqrQNfHnRlqBVZX"
 MONGOPORT = "27017"
